Fixed recipe card title overflow on users page.

--- a/src/app/recipes/recipe-card/recipe-card.component.scss
+++ b/src/app/recipes/recipe-card/recipe-card.component.scss
@@ -43,7 +43,6 @@
     }
     &__title-box{
         padding: 0 1.5rem;
-        overflow: hidden;
         font-size: 2.5rem;
         &:hover{
             cursor: pointer;
